fixed guidelines text going out of boundaries (#1005)

--- a/app/client/stylesheets/__forms.scss
+++ b/app/client/stylesheets/__forms.scss
@@ -493,6 +493,10 @@ fieldset[disabled] {
 
 .help-block {
   margin: 0 0 10px;
+
+  & > span {
+    word-wrap: break-word;
+  }
 }
 
 .field-help-message {
